--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ document.onkeydown = (e) => {
     return false;
 };
  </script>
-  
+
+  <link rel="icon" type="image/png" sizes="32x32" href="https://avatars.githubusercontent.com/u/166843420">
+	
 	<meta charset="UTF-8">
 	<title> علی دهقان</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
